# alpha-forge-launcher

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/alpha_forge_launcher/: __init__.py  __main__.py  bootstrap.py
tests/: test_bootstrap.py
