[project]
name = "alpha-forge"
version = "0.1.0"
description = "Thin launcher for the AlphaForge backtesting CLI — downloads and runs the AlphaForge binary (uvx alpha-forge)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Alforge Labs" }]
keywords = ["alphaforge", "backtesting", "quant", "trading", "cli", "pinescript"]
dependencies = []

[project.urls]
Homepage = "https://alforgelabs.com/"
Repository = "https://github.com/alforge-labs/alpha-forge-launcher"

[project.scripts]
alpha-forge = "alpha_forge_launcher.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_forge_launcher"]

[tool.ruff]
target-version = "py39"
line-length = 100

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.20",
]
